--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 README
 
-- If running WAMP on Windows, extract the files to c:\wamp\www.
-- If running Linux, you probably know what to do. If not, ask for help.
-
-Make sure that mod_rewrite is enabled.
+For WAMP users:
+- Extract the files to c:\wamp\www
+- Click on WAMP Icon -> Go to "Apache" -> Apache modules -> enable "rewrite_module"
+- Click on WAMP Icon -> Got to "PHP" -> "PHP Settings" -> enable "short open tag"
 
 This project will be available at http://localhost when set up correctly.
 
